fixed text align

--- a/styles.css
+++ b/styles.css
@@ -149,7 +149,7 @@ ul.skills {
   min-height: 800px;
   max-width: 500px;
   max-height: 1000px;
-  text-align: left;
+  text-align: center;
   background: #fff;
   border-bottom: 4px solid #ccc;
   border-radius: 6px;
